# atmo-layers

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.github/workflows/.github/workflows/: ci.yml
atmo-layers/: .gitignore  README.md  sample.csv
atmo-layers/.github/workflows/: ci.yml
atmo-layers/src/: atmo_layers.py
src/: __init__.py  atmo_layers.py
tests/: test_layers.py
