[project]
name = "atmo-layers"
version = "1.0.0"
requires-python = ">=3.10"
description = "Classify altitude into Earth's atmospheric layers with CLI and API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
strict = false
